--- a/website 3/index.html
+++ b/website 3/index.html
@@ -234,7 +234,7 @@
   <div class="container container--xsmall">
     <div class="tabs-04__title_box">
       <h1 class="heading">Break Organizational Silos</h1>
-      <p>Build and designed exclusively for Tier-1 Auto </p>
+      <p>Built and designed exclusively for Tier-1 Auto Suppliers.</p>
     </div>
   </div>
   <div class="container">
@@ -340,7 +340,7 @@
                     <div class="message__body">
                       <div class="message__in">
                         <div class="message__bubble">
-                          <div class="message__bubble_text"><b>Success!</b> Welcome aboard!<img class="emoji  " src="img/emoji/laughing.png" alt="Emoji"/>Now go and confirm your subscription pls.
+                          <div class="message__bubble_text"><b>Success!</b> Welcome aboard!<img class="emoji  " src="img/emoji/laughing.png" alt="Emoji"/>Now go and confirm your subscription please.
                           </div>
                         </div>
                         <div class="message__bubble">
