--- a/website 3/index.html
+++ b/website 3/index.html
@@ -27,8 +27,12 @@
             --></a></div>
         <div class="nav-02__links js-menu">
           <ul class="nav-02__list">
-            <!-- Write your comments here <li class="nav-02__item"><a class="button   button--black-outline  button--empty " href="javascript:void(0);" target="_blank"><span>About</span></a>
-            </li>-->
+            <!-- <li class="nav-02__item"><a href= "About"class="button   button--black-outline  button--empty " href="javascript:void(0);" target="_blank"><span>About</span></a>
+            </li>
+
+            <li class="nav-02__item"><a href= "careers.html"class="button   button--black-outline  button--empty " href="javascript:void(0);" target="_blank"><span>We're Hiring!</span></a>
+            </li> -->
+
 
             <li class="nav-02__item"><a href="https://invis.io/8QPYPJEDABJ#/336677660_3_-_All_Programs"class="button   button--black-outline " href="javascript:void(0);" target="_blank"><span>Demo</span></a>
             </li>
